# stilsoft

./: knb.py  log_only_850.txt  log_only_aec.txt  mediamtx_9036_nep.yml  mediamtx_96_nep.yml  mediamtx_i_nep.yml  mediamtx_nep.yml  mediamtx_real.yml  mediamtx_real_1.yml  mediamtx_real_11.yml  mediamtx_real_12.yml  mediamtx_real_2.yml  mediamtx_real_3.yml  mediamtx_show_nep.yml  mydata.txt  package-lock.json  package.json  password  pytest.ini  requirements.txt  sample.json  tok_file  vs90_a5000.yml  vs90_nep.yml
Lesson1/: lesson_1_task_6.py
Lesson2/: lesson_2_task_0.py  lesson_2_task_10.py  lesson_2_task_3.py  lesson_2_task_5.py  lesson_2_task_6.py
Lesson3/: lesson_3_task_3.py  mailing.py
Lesson4/: test_string_utils.py
Lesson5/: 1_click_chrome.py  1_click_firefox.py  2_noid_click_chrome.py  2_noid_click_firefox.py  4_mod_w_chrome.py  4_mod_w_firefox.py  5_input_chrome.py  6_a_form_chrome.py  6_a_form_firefox.py  aviasales-locators.txt  labirint.py  ozon-locators.txt
Lesson6/: cookie.py  elements.py  get_title.py  task_2.py  wait.py  window.py
Lesson6.1/: calculator.py  task_6_1_1.py  task_6_1_3.py
stilsoft/stilsoft/ssku/: __init__.py  api_.py  archived_stand  device_list.json  main.py  mapping.txt  module_list.json  pyproject.toml  remote.py  requirements.txt  second_curl.txt  tst.py  video_module_mask.json
stilsoft/stilsoft/ssku/api/json/: config.json  suml.json
stilsoft/stilsoft/ssku/postman/history/: events_history.json
stilsoft/stilsoft/ssku/remote/json/murom/: module_list.json
stilsoft/stilsoft/ssku/remote/json/ssku/: service_list.json
(+587 files in other folders)
