[tool.poetry]
name = "ssku"
version = "0.1.0"
description = ""
authors = ["Nepretimov_i"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
sqlalchemy = "^2.0.39"
paramiko = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
